--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,61 +1,60 @@
-#index {
-	overflow-x: hidden;
-	.landing {
-		margin-top: 160px;
-		display: flex;
-		align-items: center;
-		padding-left: 8.5%;
-
-		div {
-			h1 {
-				width: 80%;
-			}
-			p {
-				width: 60%;
-			}
-		}
-
-		img {
-			width: 50%;
-			margin-left: auto;
-			margin-bottom: -30px;
-			z-index: -1;
-		}
-	}
-	.divider {
-		position: relative;
-		width: 120%;
-		transform: translateX(-50%);
-		left: 50%;
-		height: 160px;
-		margin: 0 auto;
-		background-color: white;
-		box-shadow: 0px -26px 35px -15px rgba(0, 0, 0, 0.15);
-		border-radius: 30%;
-	}
+img {
+	object-fit: cover;
+	margin: 0 -2vw;
+	min-height: 400px;
+	max-width: 1000px;
+	width: 40vw;
+	flex-grow: 1;
 }
 
-.about-section {
-	position: relative;
-	margin-top: 90px;
+section {
 	display: flex;
+	justify-content: space-between;
 	align-items: center;
-	justify-content: center;
-	img {
-		width: 50%;
-	}
-	div {
-		width: 25%;
-		display: inline-block;
+	margin: 10vw 2vw;
+	gap: 8vw;
+	flex-wrap: wrap;
+	aside {
 		margin: 0 auto;
+		flex-basis: 500px;
+		max-width: 500px;
 	}
-
+	.border-rounded-rtl {
+		border-top-right-radius: 20px;
+		border-bottom-left-radius: 20px;
+	}
+	.border-rounded-ltr {
+		border-top-left-radius: 20px;
+		border-bottom-right-radius: 20px;
+	}
 	.links {
 		display: flex;
 		align-items: center;
-		width: 100%;
-		.button {
-			margin-right: _size(element-width) * 0.25;
+		button {
+			margin-right: 2vw;
+		}
+	}
+}
+
+.banner-cta {
+	background: _palette(primary);
+	width: 100vw;
+	margin: 0 -2vw;
+	padding: 4vw 8vw;
+	text-align: center;
+	button {
+		margin: 2rem auto 0 auto;
+	}
+	aside {
+		h3 {
+			margin: 0 auto;
+			color: _palette(background);
+			max-width: 500px;
+		}
+		p {
+			margin: 0 auto;
+			color: _palette(gray-400);
+			max-width: 500px;
 		}
 	}
 }
