--- a/src/scss/libs/_grid.scss
+++ b/src/scss/libs/_grid.scss
@@ -1,15 +1,30 @@
-// For setting behavior of grid items
-
-// /// @param {col_start} $col_start
-// /// @param {col_end} $col_end
-//     @function grid($col_start, $col_end) {
-// 	$width: columns($col_start * $col_end);
-// 	@return $width;
-// }
-
-@function col($start, $end) {
-	$width: ($start * $end);
-	@return $width * 80px;
+// Moblile (portrait and landscape)
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+	section {
+	}
 }
 
-$grid: (0-1: grid(1, 2));
+// Tablet
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+	section {
+	}
+}
+
+// Desktop
+@media only screen and (min-width: 1024px) {
+	section {
+	}
+}
+
+// Desktop HD
+@media only screen and (min-width: 1440px) {
+	section {
+	}
+}
+
+// iPhone 4
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+	only screen and (min-device-pixel-ratio: 1.5) {
+	section {
+	}
+}
