--- a/src/scss/libs/_skel.scss
+++ b/src/scss/libs/_skel.scss
@@ -1,26 +1,9 @@
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
-}
-
-body {
-	max-width: 2560px;
-	margin: 0 auto;
-	height: 100%;
-	overflow-x: hidden;
-}
-
-img {
-	color: transparent;
-}
-
 // Used for mapping variables
 
 /// @param {map} $map Map.
 /// @param {string} $keys Key(s).
 /// @return {string} Value.
-	@function val($map, $keys...) {
+@function val($map, $keys...) {
 	@if nth($keys, 1) == null {
 		$keys: remove-nth($keys, 1);
 	}
@@ -30,4 +13,39 @@ img {
 	}
 
 	@return $map;
+}
+strong,
+b {
+	color: _palette(gray-800);
+}
+
+html {
+	overflow-x: hidden;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+body {
+	margin: 0 auto;
+	height: 100%;
+	max-width: 2650px;
+}
+
+section {
+	display: grid;
+}
+
+img {
+	color: transparent;
+}
+
+blockquote {
+	padding-left: 2vw;
+	margin: 0;
+	margin-top: 4vw;
+	border-left: 1px solid _palette(gray-600);
 }
