--- a/src/scss/libs/_grid.scss
+++ b/src/scss/libs/_grid.scss
@@ -1,30 +1,30 @@
-// Moblile (portrait and landscape)
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-	section {
-	}
-}
+// // Moblile (portrait and landscape)
+// @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+// 	section {
+// 	}
+// }
 
-// Tablet
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-	section {
-	}
-}
+// // Tablet
+// @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+// 	section {
+// 	}
+// }
 
-// Desktop
-@media only screen and (min-width: 1024px) {
-	section {
-	}
-}
+// // Desktop
+// @media only screen and (min-width: 1024px) {
+// 	section {
+// 	}
+// }
 
-// Desktop HD
-@media only screen and (min-width: 1440px) {
-	section {
-	}
-}
+// // Desktop HD
+// @media only screen and (min-width: 1440px) {
+// 	section {
+// 	}
+// }
 
-// iPhone 4
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-	only screen and (min-device-pixel-ratio: 1.5) {
-	section {
-	}
-}
+// // iPhone 4
+// @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+// 	only screen and (min-device-pixel-ratio: 1.5) {
+// 	section {
+// 	}
+// }
