--- a/src/scss/libs/_skel.scss
+++ b/src/scss/libs/_skel.scss
@@ -14,13 +14,18 @@
 
 	@return $map;
 }
-strong,
-b {
-	color: _palette(gray-800);
+
+ul {
+	list-style: '•  ';
+}
+
+img {
+	color: transparent;
 }
 
 html {
 	overflow-x: hidden;
+	background-color: rgb(98, 98, 98);
 }
 
 *,
@@ -29,23 +34,27 @@ html {
 	box-sizing: border-box;
 }
 
+*:focus {
+	outline: 5px solid red;
+}
+
 body {
+	overflow-x: hidden;
 	margin: 0 auto;
-	height: 100%;
 	max-width: 2650px;
+	width: 100vw;
 }
 
-section {
-	display: grid;
+section:nth-child(2) {
+	// margin-top: 25vmin;
 }
 
-img {
-	color: transparent;
+strong,
+b {
+	color: _palette(gray-800);
 }
 
 blockquote {
-	padding-left: 2vw;
 	margin: 0;
-	margin-top: 4vw;
-	border-left: 1px solid _palette(gray-600);
+	border-left: 1px solid _palette(gray-500);
 }
