--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -37,7 +37,7 @@ i {
 p {
 	font-size: _font(body-medium);
 	margin: 0 0 _size(element-margin) * 1.75;
-	letter-spacing: _font(kerning-body-large);
+	letter-spacing: _font(kerning-body-medium);
 	font-weight: _font(weight-medium);
 }
 
@@ -93,8 +93,9 @@ h3 {
 }
 
 .label-large {
-	font-size: _font(label-large);
-	font-weight: _font(weight-medium);
+	font-size: _font(label-medium);
+	font-weight: _font(weight-black);
+	color: _palette(gray-900);
 }
 
 .label-medium {
