--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -13,7 +13,7 @@ button,
 	margin: 0;
 	padding: 0;
 	@media (max-width: 411px) {
-		width: 100% !important;
+		width: 100% !important	;
 	}
 
 	a {
@@ -21,10 +21,13 @@ button,
 		align-items: center;
 		width: 100%;
 		height: 100%;
-		padding: 1.5em 1em;
+		padding: 1.25em 1em;
 		span {
+			text-align: center;
 			width: 100%;
-			display: flex;
+			display: inline-flex;
+			align-items: center;
+			justify-content: center;
 		}
 	}
 
@@ -110,8 +113,8 @@ button,
 	}
 
 	&.default {
-		background-color: _palette(button-default);
-		color: _palette(button-default-text);
+		background-color: transparent;
+		color: _palette(primary);
 	}
 
 	&.default-outline {
