--- a/src/scss/components/_divider.scss
+++ b/src/scss/components/_divider.scss
@@ -1,12 +1,14 @@
 .divider {
+	position: relative;
 	width: 100vw;
+	margin: -40px -4vw 0 -4vw;
 	height: 80px;
-	max-width: 2651px;
-	transform: translateY(-0px);
+	max-width: 2650px;
+	z-index: 200;
 
 	.divider-container {
 		position: relative;
-		height: 80px;
+		// height: 80px;
 		z-index: 2;
 		.scroll-arrow {
 			position: absolute;
@@ -19,11 +21,10 @@
 		}
 		.divider-bar {
 			position: absolute;
-			filter: drop-shadow(0px -4px 5px rgba(0, 0, 0, 0.05));
-			overflow: hidden;
-			height: 80px;
+			filter: drop-shadow(0px -10px 5px rgba(0, 0, 0, 0.05));
+			z-index: 100;
 			left: 50%;
-			transform: translateX(-50%) scale(1.8);
+			transform: translateX(-50%);
 		}
 	}
 }
